--- a/src/styles/rest.styl
+++ b/src/styles/rest.styl
@@ -17,9 +17,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     display block
 body
     line-height 1
-html,body
-    width 100%
+body,html
     height 100%
+
 ol, ul, li
     list-style none
 blockquote, q
