--- a/src/styles/common.styl
+++ b/src/styles/common.styl
@@ -17,3 +17,13 @@
         display none !important
     .flip-clock__slot
         display none !important
+
+.checkGroup
+    .van-checkbox-group
+        display: flex;
+        justify-content: center;
+        padding: 20px 0
+        .van-checkbox
+            padding: 0 10px
+            .van-checkbox__label
+                color #fff !important
