--- a/src/styles/rest.styl
+++ b/src/styles/rest.styl
@@ -29,3 +29,6 @@ blockquotebefore, blockquoteafter, qbefore, qafter
 table
     border-collapse collapse
     border-spacing 0
+*{
+  -webkit-overflow-scrolling: touch;
+}
