--- a/src/styles/common.styl
+++ b/src/styles/common.styl
@@ -27,3 +27,6 @@
             padding: 0 10px
             .van-checkbox__label
                 color #fff !important
+.box
+    .van-notice-bar
+        width: 100vw;
