--- a/src/styles/imports.styl
+++ b/src/styles/imports.styl
@@ -1,4 +1,4 @@
-html, body
-    height 100%
-    width 100%
-$bgcolor=#00bcd4
+$bgLight = #444444
+$bgDark = #333333
+$gold = #f8ff35
+$fontColor_grey =#d0d0d0
