--- a/src/styles/cover.less
+++ b/src/styles/cover.less
@@ -1,8 +1,11 @@
+@bgLight : #444444;
+@bgDark : #333333;
+@gold : #f8ff35;
 .weui-btn.weui-btn_orange {
     border-radius: 8px;
     background-color: #ffbc3b;
-    box-shadow:8px 8px 10px #333333;
-    background-image: linear-gradient(226deg, #ffbc3b 0%, #FF2525 80%);
+    box-shadow: 8px 8px 10px #333333;
+    background-image: linear-gradient(226deg, #ffbc3b 0%, #ff2525 80%);
     &:not(.weui-btn_disabled):visited {
         color: #fff;
     }
@@ -11,14 +14,14 @@
         background-color: #fff;
     }
 }
-.weui-btn+.weui-btn{
+.weui-btn + .weui-btn {
     margin-top: 0 !important;
 }
 .weui-btn.weui-btn_blue {
     border-radius: 8px;
-    background-color:#3262FF;
-    box-shadow:8px 8px 10px #333333;
-    background-image: linear-gradient(226deg,#C5ECFD  0%, #3262FF 80%);
+    background-color: #3262ff;
+    box-shadow: 8px 8px 10px #333333;
+    background-image: linear-gradient(226deg, #c5ecfd 0%, #3262ff 80%);
     &:not(.weui-btn_disabled):visited {
         color: #fff;
     }
@@ -29,8 +32,8 @@
 }
 .weui-btn.weui-btn_grey {
     border-radius: 8px;
-    background-color:#666666;
-    box-shadow:8px 8px 10px #333333;
+    background-color: #666666;
+    box-shadow: 8px 8px 10px #333333;
     &:not(.weui-btn_disabled):visited {
         color: #555555;
     }
@@ -41,9 +44,21 @@
 }
 .圆角矩形_1 {
     border-radius: 5px;
-    background-image: -moz-linear-gradient( 67deg, rgb(61,61,61) 0%, rgb(94,94,94) 100%);
-    background-image: -webkit-linear-gradient( 67deg, rgb(61,61,61) 0%, rgb(94,94,94) 100%);
-    background-image: -ms-linear-gradient( 67deg, rgb(61,61,61) 0%, rgb(94,94,94) 100%);
+    background-image: -moz-linear-gradient(
+        67deg,
+        rgb(61, 61, 61) 0%,
+        rgb(94, 94, 94) 100%
+    );
+    background-image: -webkit-linear-gradient(
+        67deg,
+        rgb(61, 61, 61) 0%,
+        rgb(94, 94, 94) 100%
+    );
+    background-image: -ms-linear-gradient(
+        67deg,
+        rgb(61, 61, 61) 0%,
+        rgb(94, 94, 94) 100%
+    );
     box-shadow: 0px 5px 7px 0px rgba(7, 0, 2, 0.51);
     position: absolute;
     left: 519px;
@@ -51,11 +66,11 @@
     width: 200px;
     height: 90px;
     z-index: 34;
-  }
-.scroller-item{
+}
+.scroller-item {
     font-size: 30px !important;
 }
-.weui-loadmore__tips{
+.weui-loadmore__tips {
     font-size: 30px !important;
 }
 .li_grey {
@@ -64,17 +79,21 @@
     line-height: 100px;
     border-radius: 8px;
     min-height: 100px;
-    box-shadow:8px 8px 10px#1a1a1a;
+    box-shadow: 8px 8px 10px#1a1a1a;
     margin-bottom: 20px;
     box-sizing: border-box;
     background-color: #2e2e2f;
-    background-image: linear-gradient(67deg,rgb(61,61,61) 0%, rgb(94,94,94) 100%);
+    background-image: linear-gradient(
+        67deg,
+        rgb(61, 61, 61) 0%,
+        rgb(94, 94, 94) 100%
+    );
 }
 .weui-btn.weui-btn_purple {
     border-radius: 8px;
-    background-color:#666666;
-    box-shadow:8px 8px 10px #333333;
-    background-image: linear-gradient(226deg,#6012ff  0%, #c07bff 80%);
+    background-color: #666666;
+    box-shadow: 8px 8px 10px #333333;
+    background-image: linear-gradient(226deg, #6012ff 0%, #c07bff 80%);
     &:not(.weui-btn_disabled):visited {
         color: #ffffff;
     }
@@ -86,6 +105,31 @@
 .weui-btn + .weui-btn {
     margin-top: 2vw;
 }
+
+.weui-cells{
+    background: @bgLight;
+    margin-top: 0;
+    font-size: 30px;
+}
+.weui-cells.vux-no-group-title{
+    margin: 0 0 20px 0;
+
+}
+.weui-label{
+    color: #d0d0d0;
+    font-size: 26px;
+}
+.vux-x-input.weui-cell{
+    background: @bgLight;
+    border-radius: 8px;
+}
+.weui-cell__bd{
+    background: #fff;
+    color: #000;
+    line-height: 60px;
+    border-radius: 8px;
+}
+
 
 
 
@@ -107,33 +151,46 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
