--- a/src/styles/cover.less
+++ b/src/styles/cover.less
@@ -1,6 +1,16 @@
 @bgLight : #444444;
 @bgDark : #333333;
 @gold : #f8ff35;
+.weui-cells_checkbox .weui-check:checked + .vux-checklist-icon-checked:before {
+    color: #fff !important;
+}
+.vux-check-icon > .weui-icon-success:before,
+.vux-check-icon > .weui-icon-success-circle:before {
+  color: #ffffff !important;
+}
+.vux-check-icon > span{
+    color: #ffffff !important;
+}
 .weui-btn.weui-btn_orange {
     border-radius: 8px;
     background-color: #ffbc3b;
@@ -207,3 +217,4 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
