--- a/src/styles/cover.less
+++ b/src/styles/cover.less
@@ -53,6 +53,19 @@
         background-color: #fff;
     }
 }
+.weui-btn.weui-btn_brightgrey {
+    border-radius: 8px;
+    background-color: #3262ff;
+    box-shadow: 8px 8px 10px #333333;
+    background-image: linear-gradient(226deg, #000000 0%, #9e9e9e 80%);
+    &:not(.weui-btn_disabled):visited {
+        color: #fff;
+    }
+    &:not(.weui-btn_disabled):active {
+        color: @weuiBtnActiveFontColor;
+        background-color: #fff;
+    }
+}
 .weui-btn.weui-btn_grey {
     border-radius: 8px;
     background-color: #666666;
